--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="container myCardContainer" style="margin-bottom: 24px;">
     <div class="row">
 		<div class="col-12 text-center">
-			<a class="btn btn-lg btn-success" href="https://www.xelahot.com/" style="text-align: center;">Visit xelahot.com</a>
+			<a class="btn btn-lg btn-success" href="https://agarmacro.github.io/Xelahot/index.html" style="text-align: center;">Visit xelahot.com</a>
 		</div>
     </div>
 </div>
